# BT36_BLE_firmware

./: .gitignore  .gitmodules  README.md
.github/workflows/: build.yml
SDK/DA14535_SDK/: README.md
project/: CMakeLists.txt  Makefile  build-linux.sh  build-windows.bat  custom_profile.c
project/components/config/inc/: user_config.h  user_periph_setup.h
project/gcc/: dialog-sdk.cmake
project/include/: user_custs1_def.h
project/src/: ble_handlers.c  printf_gcc.c  user_app.c  user_custs1_def.c  user_custs_config.c
project/src/custom_profile/: user_custs1_def.h
project/user_app/: main.c  user_adv.c  user_ble_service.c  user_uart.c
